# quote_project

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yml  multiple_server_yaml_file.py  proj_struct.py  pyproject.toml  test_integration.py
.github/workflows/: deploy-ubuntu.yml  main.yaml
apps/agent_app/: debug_schema.json  main.py  pyproject.toml  test_cli.py
apps/agent_app/config/: config.yaml
apps/agent_app/src/agenticAI_full_workflow/agent/: agent_workflow.py
apps/agent_app/src/agenticAI_full_workflow/agent_state/: state.py
apps/agent_app/src/agenticAI_full_workflow/constants/: __init__.py
apps/agent_app/src/agenticAI_full_workflow/project_nodes/: agent_node.py  inspector_node.py  interviewer_nodes.py  review_nodes.py  scout_node.py  submitter_node.py
apps/agent_app/src/agenticAI_full_workflow/prompt_library/: prompts.py
apps/agent_app/src/agenticAI_full_workflow/schemas/: form_schema.py
apps/agent_app/src/agenticAI_full_workflow/utils/: api_loader.py  common.py  model_loader.py
mcp_servers/quote_mcp/: pyproject.toml  server.py
mcp_servers/quote_mcp/src/config/: config.py
mcp_servers/quote_mcp/src/tools/: getprice_tool.py
mcp_servers/quote_mcp/src/utils/: auth_service.py  quote_service.py
shared_core/: pyproject.toml
shared_core/exception/: exceptionhandling.py
shared_core/logger/: logging.py
