[project]
name = "shared-core"
version = "0.1.0"
description = "Core shared utilities"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [] # Don't auto-detect, use force-include below

# Map current folder contents to 'shared_core' package
[tool.hatch.build.targets.wheel.force-include]
"." = "shared_core"
